# hestia-agent

./: .env.example  .gitignore  Dockerfile  README.md  VPS_INSTALL_AGENT.md  pyproject.toml
.github/workflows/: ci.yml
app/: backends.py  config.py  database.py  dependencies.py  main.py  models.py  prompts.py
app/routers/: auth.py  chat.py  conversations.py  greeting.py  health.py  tts.py  whisper.py
app/tools/: __init__.py  cooking.py  cross_domain.py  energy.py  mealie.py  memory.py  registry.py  shopping.py
tests/: conftest.py  test_auth.py  test_backends.py  test_chat.py  test_conversations.py  test_greeting.py  test_health.py  test_prompts.py  test_summarize.py  test_tools.py  test_tools_cooking.py  test_tools_cross_domain.py  test_tools_energy.py  test_tools_mealie.py  test_tools_memory.py  test_tools_shopping.py  test_tts.py  test_whisper.py
